2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLite3.cs:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteBase.cs:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteCommand.cs:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteConvert.cs:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteDataReader.cs:
	Performance fixes ported from upstream System.Data.Sqlite, making SqliteType
	a class (not struct) and avoid unnecessary calls to TypeNameToDbType.

2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Mono.Data.Sqlite/bnc-490021_mds-even-better.patch:
	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteConvert.cs:
	Building on Bertrand's patch, improve performance even more.

2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/tests/Performance/Makefile.am: Also build an exe, useful for
	drilling into a performance problem with mono --profile.

	* src/tests/Performance/PerformanceTests.cs: Categorize tests, add
	FetchTrack, LoadTrack, and Select* tests testing relatively low level db
	operations.

2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Data.Sqlite/HyenaSqliteArrayDataReader.cs:
	Dispose underlying reader after reading in all its values.

2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Data.Sqlite/HyenaSqliteConnection.cs: Remove
	old comment about how to fix the transactions code.

2009-04-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* configure.ac:
	* tests/Analyzer/Analyzer.cs:
	* tests/Analyzer/Makefile.am:
	* tests/Makefile.am:
	* tests/Performance/Makefile.am:
	* tests/Performance/PerformanceTests.cs:
	* tests/compare-perf-results:
	* tests/test-perf: New scripts and tests for testing and comparing
	performance across commits.

2009-04-05  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs: